--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,16 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	//Lombok
+	implementation 'org.projectlombok:lombok'
+	annotationProcessor "org.projectlombok:lombok"
+
+	//Database
+	implementation 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.flywaydb:flyway-core'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
