Include a schema into h2 database for pilotos service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,4 +19,6 @@ spring:
     flyway:
         enabled: true
         baseline-on-migrate: true
+        table: flyway_schema_pilotos
+        default-schema: pilotos
 
