--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,18 +4,16 @@ spring:
       console:
           enabled: true
     datasource:
-        url: jdbc:h2:mem:pilotos
+        url: jdbc:h2:mem:dbpilotos
         username: sa
 #        password: password
         driverClassName: org.h2.Driver
     jpa:
         spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
         show-sql: true
-#        hibernate:
-#           ddl-auto: none
-#        properties:
-#            hibernate:
-#                default_schema: dbo
+        properties:
+            hibernate:
+                default_schema: pilotos
     flyway:
         enabled: true
         baseline-on-migrate: true
