--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
         driverClassName: org.h2.Driver
     jpa:
         spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-        show-sql: true
+        show-sql: false
         properties:
             hibernate:
                 default_schema: pilotos
