--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.flywaydb:flyway-core'
 
+	//RabbitMQ
+	implementation 'org.springframework.amqp:spring-rabbit'
+	implementation 'org.springframework.amqp:spring-amqp'
+//	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	//OpenAPI
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.4'
 
