--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,13 @@ spring:
             host: localhost
             port: 27017
             database: dbPilotos
+    rabbitmq:
+        host: localhost
+        port: 15672
+        username: guest
+        password: guest
+        template:
+            exchange: pilots
+            default-receive-queue: pilots
+    main:
+        allow-bean-definition-overriding: true
